EUW-268: OAuth2-server metadata-endpoint (#11)
* grant-types and auth-details added