@@ -50,6 +50,7 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
                 .tokenEndpoint(sdkConfiguration.getTokenEndpoint())
                 .userinfoEndpoint(sdkConfiguration.getUserinfoEndpoint())
                 .jwksUri(sdkConfiguration.getJwksUri())
+                .grantTypesSupported(sdkConfiguration.getGrantTypesSupported())
                 .acrValuesSupported(sdkConfiguration.getAcrValues())
                 .uiLocalesSupported(sdkConfiguration.getUiLocales())
                 .codeChallengeMethodsSupported(sdkConfiguration.getCodeChallengeMethodsSupported())
@@ -78,7 +79,6 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
         validateResponseType(authorizationRequest, clientMetadata);
         validateCodeChallenge(authorizationRequest, clientMetadata);
         validateScope(authorizationRequest, clientMetadata);
-        validateAcrValues(authorizationRequest, clientMetadata);
         validateUiLocales(authorizationRequest, clientMetadata);
         validateResponseMode(authorizationRequest, clientMetadata);
         validateState(authorizationRequest, clientMetadata);
@@ -127,28 +127,8 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
         if (authorizationRequest.getScope().isEmpty()) {
             throw new OAuth2Exception(OAuth2Exception.INVALID_SCOPE, "No scopes requested.", 400);
         }
-        // TODO
-//        if (!authorizationRequest.getScope().contains("openid")) {
-//            throw new OAuth2Exception(OAuth2Exception.INVALID_SCOPE, "Not an OpenID Connect request.", 400);
-//        }
-//        if (!clientMetadata.getScopes().containsAll(authorizationRequest.getScope())) {
-//            log.info("Invalid scopes [{}] for client [{}]", authorizationRequest.getScope(), clientMetadata.getClientId());
-//            throw new OAuth2Exception(OAuth2Exception.INVALID_SCOPE, "Client does not have access to all of the requested scopes.", 400);
-//        }
     }
 
-    @SuppressWarnings("unused")
-    protected void validateAcrValues(PushedAuthorizationRequest authorizationRequest, ClientMetadata clientMetadata) {
-        // TODO
-//        if (!sdkConfiguration.getAcrValues().containsAll(authorizationRequest.getAcrValues())) {
-//            throw new OAuth2Exception(OAuth2Exception.INVALID_REQUEST, "Invalid parameter acr_values. Requested values not supported.", 400);
-//        }
-//        if (authorizationRequest.getAcrValues().isEmpty()) {
-//            authorizationRequest.setResolvedAcrValue(sdkConfiguration.getAcrValues().get(0));
-//        } else {
-//            authorizationRequest.setResolvedAcrValue(authorizationRequest.getAcrValues().get(0));
-//        }
-    }
 
     @SuppressWarnings("unused")
     protected void validateUiLocales(PushedAuthorizationRequest authorizationRequest, ClientMetadata clientMetadata) {
@@ -248,8 +228,8 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
     /**
      * Extension point for custom pushed authorization request handling.
      *
-     * @param authorizationRequest
-     * @return
+     * @param authorizationRequest the pushed authorization request
+     * @return PushedAuthorizationResponse
      */
     protected PushedAuthorizationResponse createResponse(PushedAuthorizationRequest authorizationRequest) {
         return createPushedAuthorizationResponse(authorizationRequest);
@@ -258,7 +238,7 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
     /**
      * Creates a pushed authorization response to the pushed authorization request.  Clients must redirect the browser
      * to the authorization endpoint.
-     * @param authorizationRequest
+     * @param authorizationRequest client authz request
      * @return pushed authorization response with request_uri
      */
     protected final PushedAuthorizationResponse createPushedAuthorizationResponse(PushedAuthorizationRequest authorizationRequest) {
@@ -490,7 +470,7 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
         Objects.requireNonNull(clientMetadata);
         Objects.requireNonNull(error);
         AuthorizationResponse authorizationResponse = AuthorizationResponse.builder()
-                .redirectUri(clientMetadata.getRedirectUris().get(0))
+                .redirectUri(clientMetadata.getRedirectUris().getFirst())
                 .aud(clientMetadata.getClientId())
                 .iss(sdkConfiguration.isAuthorizationResponseIssParameterSupported() ? sdkConfiguration.getIssuer().toString() : null)
                 .responseMode("query.jwt")
@@ -631,7 +611,7 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
                         .jwtID(generateId())
                         .audience(authorizationResponse.getAud())
                         .issuer(sdkConfiguration.getIssuer().toString())
-                        .expirationTime(new Date(new Date().getTime() + (sdkConfiguration.getAuthorizationLifetimeSeconds() * 1000)))
+                        .expirationTime(new Date(new Date().getTime() + (sdkConfiguration.getAuthorizationLifetimeSeconds() * 1000L)))
                         .issueTime(new Date());
                 authorizationResponse.toResponseParameters().forEach(jwtClaimsSetBuilder::claim);
                 return new RedirectedResponse(authorizationResponse.getRedirectUri(), Map.of("response", signJwt(jwtClaimsSetBuilder.build())));
@@ -648,8 +628,8 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
         if (tokenRequest == null) {
             throw new OAuth2Exception(OAuth2Exception.INVALID_REQUEST, "Empty or missing request.", 400);
         }
-        if (!"authorization_code".equals(tokenRequest.getGrantType())) {
-            throw new OAuth2Exception(OAuth2Exception.UNSUPPORTED_GRANT_TYPE, "Invalid parameter grant_type. Only authorization_code supported.", 400);
+        if (!hasText(tokenRequest.getGrantType()) || !sdkConfiguration.getGrantTypesSupported().contains(tokenRequest.getGrantType())) {
+            throw new OAuth2Exception(OAuth2Exception.UNSUPPORTED_GRANT_TYPE, "Invalid parameter grant_type. Supported: " + sdkConfiguration.getGrantTypesSupported(), 400);
         }
         if (!hasText(tokenRequest.getCode())) {
             throw new OAuth2Exception(OAuth2Exception.INVALID_REQUEST, "Invalid parameter code.", 400);
@@ -660,7 +640,7 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
         if (!hasText(tokenRequest.getCodeVerifier()) && getSDKConfiguration().isRequirePkce()) {
             throw new OAuth2Exception(OAuth2Exception.INVALID_REQUEST, "Missing parameter code_verifier. PKCE is required.", 400);
         }
-        if (hasText(tokenRequest.getCodeVerifier()) && !tokenRequest.getCodeVerifier().matches("^[A-Za-z0-9\\-\\._~]{43,128}$")) {
+        if (hasText(tokenRequest.getCodeVerifier()) && !tokenRequest.getCodeVerifier().matches("^[A-Za-z0-9\\-._~]{43,128}$")) {
             throw new OAuth2Exception(OAuth2Exception.INVALID_REQUEST, "Invalid parameter code_verifier.", 400);
         }
     }
@@ -677,10 +657,7 @@ public class OpenIDConnectIntegrationBase implements OpenIDConnectIntegration {
         }
         byte[] hash = digest.digest(codeVerifier.getBytes(StandardCharsets.US_ASCII));
         byte[] decode = Base64.getUrlDecoder().decode(codeChallenge);
-        if (!Arrays.equals(hash, decode)) {
-            return false;
-        }
-        return true;
+        return Arrays.equals(hash, decode);
     }
 
     @Override
